# PREPPED

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  start.ps1
backend/: README.md  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  ingest.py  main.py
backend/app/api/: __init__.py  auth.py  chat.py  common.py  history.py  marker.py  reminder.py  report.py  upload.py
backend/app/assistant/: __init__.py  chat.py  prompt.py  tools.py
backend/app/data/: __init__.py  markers_catalog.py  reference_ranges.py  synthetic.py
backend/app/engine/: __init__.py  actions.py  flags.py  ranges.py  trends.py
backend/app/extraction/: __init__.py  client.py  prompt.py  schema.py
backend/app/models/: db.py  domain.py
backend/tests/: conftest.py  test_assistant.py  test_at1_trend.py  test_at2_action.py  test_at3_idempotent.py  test_auth.py  test_boundary.py  test_report.py
docs/: README.md  lab_report_2024-03-10.html  lab_report_2024-09-15.html  lab_report_2025-03-20.html
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  engine.ts  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: ActionCard.tsx  Disclaimer.tsx  FlagBadge.tsx  LanguageToggle.tsx  PasswordInput.tsx  TrendChart.tsx
frontend/src/data/: catalog.ts  seed.ts
frontend/src/i18n/: LanguageContext.tsx  markerNames.ts  (+1 more)
synthetic/: README.md  rafael.json  test_user.json
synthetic/samples/: lab_report_sample.html
(+9 files in other folders)
